--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "antd": "^5.11.4",
+    "@rc-component/trigger": "^1.18.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
